# ReadingAssistant

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
conf/: configurations.yml  openai_conf.yml
src/core/: agent_tools.py  brain.py  connector.py  muscle.py  processor.py
src/state/: state_manager.py
src/ui/: interface.py
